--- a/Links/dbaclass_com_links.html
+++ b/Links/dbaclass_com_links.html
@@ -3,3 +3,102 @@ https://dbaclass.com/article/expdp-impdp-tutorial-in/
 
 User Management in Oracle
 https://dbaclass.com/article/user-management-in-oracle/
+
+Tablespace Management in oracle
+https://dbaclass.com/article/tablespace-management-in-oracle/
+
+Scheduler jobs in oracle
+https://dbaclass.com/article/scheduler-jobs-oracle/
+
+Schedule expdp job in dbms_scheduler
+https://dbaclass.com/article/schedule-expdp-job-in-dbms_scheduler/
+
+Partition an existing table oracle using exchange method
+https://dbaclass.com/article/partition-an-existing-table-oracle-using-exchange-method/
+
+How to enable/disable archive log mode in oracle database
+https://dbaclass.com/article/how-to-enabledisable-archive-log-mode-in-oracle-database/
+
+How to create synonym for a schema
+https://dbaclass.com/article/how-to-create-synonym-for-a-schema/
+
+How to connect to another user without knowing the password in oracle
+https://dbaclass.com/article/how-to-connect-to-another-user-without-knowing-the-password-in-oracle/
+
+How to create a database manually
+https://dbaclass.com/article/how-to-create-a-database-manually/
+
+How to drop a database in oracle
+https://dbaclass.com/article/how-to-drop-a-database-in-oracle/
+
+How to create database link without modifying the tnsnames.ora
+https://dbaclass.com/article/how-to-create-database-link-without-modifying-the-tnsnames-ora/
+
+How to drop a private database link From sys
+https://dbaclass.com/article/how-to-drop-a-private-database-link-from-sys/
+
+How to deinstall oracle client
+https://dbaclass.com/article/how-to-deinstall-oracle-client/
+
+How to Enable Trace for a listener
+https://dbaclass.com/article/how-to-enable-trace-for-a-listener/
+
+Tracing sessions in oracle
+https://dbaclass.com/article/tracing-sessions-in-oracle/
+
+Create Incident package using ADRCI utility
+https://dbaclass.com/article/create-incident-package-using-adrci-utility/
+
+Drop and recreate undo tablespace
+https://dbaclass.com/article/drop-and-recreate-undo-tablespace/
+
+How to drop and recreate temp tablespace in oracle
+https://dbaclass.com/article/how-to-drop-and-recreate-temp-tablespace-in-oracle/
+
+How to Reload expdp and impdp utility in oracle
+https://dbaclass.com/article/how-to-reload-expdp-and-impdp-utility-in-oracle/
+
+How to change the oracle database name using nid utility
+https://dbaclass.com/article/how-to-change-the-oracle-database-name-using-nid-utility/
+
+How to move lob segment to another tablespace
+https://dbaclass.com/article/how-to-move-lob-segment-to-another-tablespace/
+
+Interval Partitioning in oracle
+https://dbaclass.com/article/interval-partitioning-in-oracle/
+
+Disabling auto tasks from dba_autotask_client
+https://dbaclass.com/article/disabling-auto-tasks-from-dba_autotask_client/
+
+How to drop tablespace in oracle
+https://dbaclass.com/article/how-to-drop-tablespace-in-oracle/
+
+How to rename tablespace in oracle
+https://dbaclass.com/article/how-to-rename-tablespace-in-oracle/
+
+How to make a table read only in oracle
+https://dbaclass.com/article/how-to-make-a-table-read-only-in-oracle/
+
+How to rename or move a datafile in oracle
+https://dbaclass.com/article/how-to-rename-or-move-a-datafile-in-oracle/
+
+Clone a RAC database to Standalone database using RMAN backup
+https://dbaclass.com/article/clone-a-rac-database-to-standalone-database-using-rman-backup/
+
+Cloning Oracle home from one server to another server
+https://dbaclass.com/article/cloning-oracle-home-from-one-server-to-another-server/
+
+resumable_timeout parameter in oracle database
+https://dbaclass.com/article/resumable_timeout-parameter-in-oracle-database/
+
+Force logging in oracle
+https://dbaclass.com/article/force-logging-oracle/
+
+How to multiplex control file in standalone database
+https://dbaclass.com/article/multiplex-control-file-standalone-database/
+
+sec_case_sensitive_logon parameter in oracle
+https://dbaclass.com/article/sec_case_sensitive_logon-parameter-oracle/
+
+How to apply JDK patch in oracle database
+https://dbaclass.com/article/how-to-apply-jdk-patch-in-oracle-database/
